<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/stadium_image" />

        <LinearLayout
            android:id="@+id/score_layout_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="36dp"
                    android:gravity="center"
                    android:src="@drawable/logo_fc_barcelona" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/scoreTeamATextViewStyle"
                    android:text="@string/initialValueScoreAteam" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    style="@style/foulsTeamATextViewStyle"
                    android:text="@string/initialValueScoreBteam" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/scoreGoalText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addFoulTeamA"
                    android:text="@string/foulText" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="220dp"
                android:background="@android:color/darker_gray"></View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="152dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:src="@drawable/logo_real_madrid" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/scoreTeamBTextViewStyle"
                    android:text="@string/initialValueScoreBteam" />

                <TextView
                    android:id="@+id/team_b_fouls"
                    style="@style/foulsTeamBTextViewStyle"
                    android:text="@string/initialValueFoulsBTeam" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/scoreGoalText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addFoulTeamB"
                    android:text="@string/foulText" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/score_layout_portrait"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="94dp"
            android:onClick="resetScore"
            android:text="@string/resetAllValues" />

    </RelativeLayout>

</ScrollView>